# Pipeline_ETL_Marketing

./: .gitignore  README.md  main.py  output.html  pyproject.toml  requerements.txt
src/: validador.py
